# ephemeral-nft-achievements

./: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
libraries/account-util/: Cargo.toml
libraries/account-util/src/: lib.rs
programs/ephemeral-nft-achievements/: Cargo.toml
programs/ephemeral-nft-achievements/src/: lib.rs  state.rs  util.rs
programs/identity/: Cargo.toml
programs/identity/src/: error.rs  lib.rs  state.rs
programs/nft-achievement/: Cargo.toml
programs/nft-achievement/src/: lib.rs  state.rs
programs/profile/: Cargo.toml
programs/profile/src/: error.rs  lib.rs  state.rs
tests/: achievement.ts  ephemeral-nft-achievements.ts  identity.ts  profile.ts  util.ts
types/: anchor.d.ts  buffer-layout.d.ts
